force-app/main/default/objects/DXAPI__c/DXAPI__c.object-meta.xml
<CustomObject>
    <label>DXAPI</label>
    <nameField>
        <label>DXAPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DXAPI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>