force-app/main/default/objects/DXAPI__c/fields/CreateThroughContact__c.field-meta.xml
<CustomField>
    <fullName>CreateThroughContact__c</fullName>
    <label>CreateThroughContact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>