force-app/main/default/objects/DXAPI__c/fields/Resbody__c.field-meta.xml
<CustomField>
    <fullName>Resbody__c</fullName>
    <label>Resbody</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>