force-app/main/default/objects/DXAPI__c/fields/statusCode__c.field-meta.xml
<CustomField>
    <fullName>statusCode__c</fullName>
    <label>statusCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>